[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/tile000.png" type="Texture" id=1]
[ext_resource path="res://Sprites/tile012.png" type="Texture" id=2]
[ext_resource path="res://Sprites/tile011.png" type="Texture" id=3]
[ext_resource path="res://Sprites/tile010.png" type="Texture" id=4]
[ext_resource path="res://Sprites/tile017.png" type="Texture" id=5]
[ext_resource path="res://Sprites/tile016.png" type="Texture" id=6]
[ext_resource path="res://Sprites/tile015.png" type="Texture" id=7]
[ext_resource path="res://Sprites/tile007.png" type="Texture" id=8]
[ext_resource path="res://Sprites/tile006.png" type="Texture" id=9]
[ext_resource path="res://Sprites/tile005.png" type="Texture" id=10]
[ext_resource path="res://Sprites/tile001.png" type="Texture" id=11]
[ext_resource path="res://verdeM.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "rojo",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "morado",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "verde",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.88673, 10 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 15.683

[node name="Node" type="Node" index="0"]

[node name="00" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 283.39, 201.407 )
frames = SubResource( 1 )
animation = "default"
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="00" index="0"]

position = Vector2( 0.576714, -0.0395947 )
scale = Vector2( 0.972853, 0.992113 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="00/StaticBody2D" index="0"]

position = Vector2( 0.466988, 0.0886515 )
scale = Vector2( 2.82648, 2.71426 )
shape = SubResource( 2 )

[node name="01" type="AnimatedSprite" parent="." index="1"]

position = Vector2( 338.39, 201.407 )
frames = SubResource( 1 )
animation = "default"
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="01" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="01/StaticBody2D" index="0"]

position = Vector2( 1.24986, 0.000549614 )
scale = Vector2( 2.76573, 2.70749 )
shape = SubResource( 2 )

[node name="11" type="AnimatedSprite" parent="." index="2"]

editor/display_folded = true
position = Vector2( 338.39, 256.407 )
frames = SubResource( 1 )
animation = "default"
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="11" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="11/StaticBody2D" index="0"]

position = Vector2( 1.24986, 0.000549614 )
scale = Vector2( 2.76573, 2.70749 )
shape = SubResource( 2 )

[node name="21" type="AnimatedSprite" parent="." index="3"]

editor/display_folded = true
position = Vector2( 338.39, 311.407 )
frames = SubResource( 1 )
animation = "default"
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="21" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="21/StaticBody2D" index="0"]

position = Vector2( 1.24986, 0.000549614 )
scale = Vector2( 2.76573, 2.70749 )
shape = SubResource( 2 )

[node name="verdeM" type="Sprite" parent="." index="4"]

position = Vector2( 427.673, 41.8455 )
texture = ExtResource( 11 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="verdeM" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="verdeM/Area2D" index="0"]

position = Vector2( 0.642563, -0.532806 )
scale = Vector2( 1.02512, 1.03145 )
shape = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 445.0
margin_top = 54.0
margin_right = 462.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "1"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[connection signal="input_event" from="verdeM/Area2D" to="verdeM" method="_on_Area2D_input_event"]

[connection signal="mouse_entered" from="verdeM/Area2D" to="verdeM" method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="verdeM/Area2D" to="verdeM" method="_on_Area2D_mouse_exited"]


